--- a/index.html
+++ b/index.html
@@ -760,9 +760,12 @@
   <script src="swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
+
+</html>
+
 
 </html>
 pt>
