--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Vendor CSS Files -->
   <link href="bootstrap.min.css" rel="stylesheet">
-  <link href="bootstrap-icons.css" rel="stylesheet">
+  <link href="bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="aos.css" rel="stylesheet">
   <link href="glightbox.min.css" rel="stylesheet">
   <link href="swiper-bundle.min.css" rel="stylesheet">
@@ -758,6 +758,14 @@
   <script src="imagesloaded.pkgd.min.js"></script>
   <script src="isotope.pkgd.min.js"></script>
   <script src="swiper-bundle.min.js"></script>
+
+  <!-- Main JS File -->
+  <script src="main.js"></script>
+
+</body>
+
+</html>
+swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
   <script src="main.js"></script>
