--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <CENTER>
         <h2>HON. THOMAS TAYEBWA</h2>
-        <p>I'm <span class="typed" data-typed-items="A Lawyer, A deputy Speaker, A Member of Parliament, A Hard worker, Aspring for 2026-2031, "></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="A Lawyer, A deputy Speaker, A Member of Parliament, A Hard worker, Aspring for 2026-2031, "></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </CENTER>
       </div>
 
@@ -110,7 +110,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>44</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>45</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Masters in Law</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Responsibilty:</strong> <span>Representing my people's ideas</span></li>
                 </ul>
@@ -160,7 +160,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="332" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Jobs provived</strong> <span>and more coming</span></p>
             </div>
           </div><!-- End Stats Item -->
@@ -764,6 +764,12 @@
 </body>
 
 </html>
+-- Main JS File -->
+  <script src="main.js"></script>
+
+</body>
+
+</html>
 pe.pkgd.min.js"></script>
   <script src="swiper-bundle.min.js"></script>
 
@@ -813,7 +819,13 @@ t src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
 </html>
 ->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i><script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
