--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-
+ <div id="preloader" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYfAtYns_4KP1DtJyJ5pjwrNt44SVxx7rCYZKkaTLCgA&s=10"></div>
   <!-- Vendor JS Files -->
   <script src="bootstrap.bundle.min.js"></script>
   <script src="aos.js"></script>
